[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

[lib]
name = "user_service_lib"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serde for serialization and deserialization.
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bcrypt = "0.10" # Bcrypt for hashing and verifying passwords.
jsonwebtoken = "7"  # For JWT handling
chrono = "0.4"     # For managing token expiration times
config = "0.10"
toml = "0.5"
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }


[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_sqlite"]